--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 
 #navbar {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    justify-items: center;
 }
 
 #welcome {
@@ -16,20 +18,15 @@
 }
 
 #main-doc1{
-    background-color: rgba(90, 90, 111, 0.3);
+    background-image: ;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 25px auto;
     align-items: center;
 }
 
- select {
-     width: 75%;
-     height: 40px;
-     margin: 10px;
- }
-
- input {
-    width: 73.6%;
+ input, select {
+    width: 70%;
     height: 40px;
     margin: 10px;
   }
@@ -38,48 +35,148 @@
      margin: 40px;
      text-align: justify;
      line-height: 20px;
+     font-family: 'Hind Madurai', sans-serif;
  }
+
+ #main-doc1 h1 {
+     grid-column: 1/3;
+     text-align: center;
+     padding-top: 15px;
+     font-family: 'Anton', sans-serif;
+ }
+
+ figure{
+     text-align: center;
+ }
+
+figcaption {
+    font-family: 'Anton', sans-serif;
+}
 
  #developer {
      max-width: 50%;
      height: auto;
-
  }
 
  #main-doc2 p {
    margin-left: 20%;
    margin-right: 20%;
-   text-align: justify;
+   text-align: center;
 }
 
 figcaption {
-    font-size: xx-large;
+    font-size: larger;
 }
 
  #main-doc2 {
     width: 100%;
-    text-align: center;
+    text-align: justify;
  }
 
- @media (max-width: 700px){
-    #main-doc1{
-        background-color: rgba(90, 90, 111, 0.3);
-        display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 100%;
-        align-items: center;
-    }
-
-    #text-doc {
-        margin: 10px;
-        text-align: justify;
-        line-height: 20px;
-    }
- }
 
  #main-doc3 {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: auto auto;
-     grid-area: 1/1/4/2;
+     background-color: silver;
+     grid-column-gap: 20px;
+     text-align: justify;
+     padding-left: 20px;
+     padding-right: 20px;
+ }
+
+ #main-doc3 h2 {
+     grid-column: 1/4;
+     text-align: center;
+ }
+
+ section header {
+     text-align: center;
+ }
+
+ form {
+   display: grid;
+   grid-template-columns: auto;
+   grid-template-rows: repeat(5, auto);
+   justify-items: center;
+   grid-row-gap: 20px;
+ }
+
+
+ #footers {
+     display: flex;
+     flex-direction: row;
+ }
+
+ #foot2, #foot1 {
+   margin: auto;
+ }
+
+ #foot1 header {
+    font-family: 'Coda Caption', sans-serif;
+ }
+
+ @media (max-width: 700px){
+    #navbar {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        justify-items: center;
+    }
+
+
+    #logo2, #logo3 {
+        display: none;
+    }
+
+    #main-doc1{
+        background-color: rgba(90, 90, 111, 0.3);
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        align-items: center;
+    }
+   
+    input, select {
+       margin-left: 10px;
+       width: 90%;
+       height: 40px;
+       margin: 10px;
+     }
+
+
+
+    #main-doc1 h1 {
+        grid-column: 1/2;
+        text-align: center;
+        padding-top: 15px;
+    }
+
+    #text-doc h3 {
+        text-align: center;
+    }
+
+    #main-doc3 {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+        background-color: silver;
+        grid-row-gap: 20px;
+        text-align: justify;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+   
+    #main-doc3 h2 {
+        grid-column: 1/2;
+        text-align: center;
+    }
+
+    #foot2 {
+        display: none;
+    }
+    #foot1 {
+        text-align: center;
+    }
+   
  }
