--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,15 @@
 }
 
 #main-doc1{
-    background-image: ;
+    background: linear-gradient(to left, #567, #678 20%, #124 80%);
+
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 25px auto;
     align-items: center;
+    color: white;
 }
+
 
  input, select {
     width: 70%;
@@ -71,6 +74,7 @@ figcaption {
  #main-doc2 {
     width: 100%;
     text-align: justify;
+    margin-top: 10px;
  }
 
 
@@ -88,6 +92,7 @@ figcaption {
  #main-doc3 h2 {
      grid-column: 1/4;
      text-align: center;
+     font-family:'Anton', sans-serif;
  }
 
  section header {
@@ -170,6 +175,7 @@ figcaption {
     #main-doc3 h2 {
         grid-column: 1/2;
         text-align: center;
+        font-family:'Anton', sans-serif;
     }
 
     #foot2 {
